--- a/app/src/main/res/drawable/ic_previous.xml
+++ b/app/src/main/res/drawable/ic_previous.xml
@@ -6,5 +6,5 @@
     android:tint="?attr/colorControlNormal">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M10,8.64L15.27,12 10,15.36V8.64M8,5v14l11,-7L8,5z"/>
+      android:pathData="M6,6h2v12L6,18zM9.5,12l8.5,6L18,6z"/>
 </vector>
