--- a/app/src/main/res/layout/item_home_list_playing.xml
+++ b/app/src/main/res/layout/item_home_list_playing.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white_transparent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -22,6 +22,7 @@
         android:layout_marginBottom="10dp"
         android:singleLine="true"
         android:maxLength="25"
+        android:text="Song name"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -34,19 +35,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="dsdsdsdsds"
+        android:textColor="@color/dark_grey"
         app:layout_constraintTop_toBottomOf="@id/song_name"
         app:layout_constraintLeft_toRightOf="@id/song_poster"/>
 
     <ImageView
         android:id="@+id/adjust"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="4dp"
         android:padding="10dp"
-        android:src="@drawable/ic_grey_menu"
+        android:src="@drawable/ic_music"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/grey" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
