--- a/app/src/main/res/layout/layout_music_player_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_music_player_bottom_sheet.xml
@@ -8,6 +8,8 @@
     android:background="@color/white"
     app:behavior_hideable="true"
     app:behavior_peekHeight="100dp"
+    android:clickable="true"
+    android:focusable="true"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,7 +42,9 @@
                 android:id="@+id/song_name_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Never Dead"
+                android:text="Never DeadNever DeadNever DeadNever Dead"
+                android:paddingEnd="140dp"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -60,7 +64,7 @@
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:padding="10dp"
         android:src="@drawable/ic_arrow_up"
@@ -72,12 +76,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:singleLine="true"
         android:text="Song name"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:visibility="gone"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/close_hide_button"
+        app:layout_constraintRight_toLeftOf="@id/more"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -123,9 +130,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
+            android:singleLine="true"
             android:text="Some music name"
             android:textColor="@color/black"
             android:textSize="20sp"
+            app:layout_constraintHorizontal_bias="0.51"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/song_poster_card" />
