--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="white_transparent">#e6e9f0</color>
+    <color name="grey">#c0c0c0</color>
+    <color name="dark_grey">#686868</color>
 </resources>
