--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -72,7 +72,7 @@
             android:id="@+id/shimmer_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/search_layout"
+            app:layout_constraintTop_toBottomOf="@id/search_layout"
             app:shimmer_auto_start="true">
 
             <androidx.recyclerview.widget.RecyclerView
