--- a/app/src/main/res/layout/layout_music_player_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_music_player_bottom_sheet.xml
@@ -51,7 +51,7 @@
                 android:id="@+id/song_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="03:45" />
+                android:text="00:00" />
 
         </LinearLayout>
 
@@ -169,7 +169,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="01:00"
+                android:text="00:00"
                 android:textColor="@color/black"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -179,12 +179,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="05:00"
+                android:text="00:00"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.exoplayer2.ui.DefaultTimeBar
+            <SeekBar
                 android:id="@+id/seekbar"
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
@@ -192,7 +192,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
-                android:progress="20"
+                android:progress="0"
                 app:layout_constraintTop_toBottomOf="@id/finish_time" />
 
             <ImageView
