--- a/app/src/main/res/layout/item_home_list_playing.xml
+++ b/app/src/main/res/layout/item_home_list_playing.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
@@ -22,7 +21,6 @@
         android:layout_marginBottom="10dp"
         android:singleLine="true"
         android:maxLength="25"
-        android:text="Song name"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -34,13 +32,11 @@
         android:id="@+id/album_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="dsdsdsdsds"
         android:textColor="@color/dark_grey"
         app:layout_constraintTop_toBottomOf="@id/song_name"
         app:layout_constraintLeft_toRightOf="@id/song_poster"/>
 
     <ImageView
-        android:id="@+id/adjust"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="4dp"
@@ -50,6 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/grey" />
+        app:tint="@color/grey"
+        android:contentDescription="@string/music_playing_content_description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
