--- a/app/src/main/res/layout/layout_music_player_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_music_player_bottom_sheet.xml
@@ -94,6 +94,7 @@
         android:layout_marginEnd="10dp"
         android:src="@drawable/ic_more"
         android:visibility="gone"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
