--- a/app/src/main/res/layout-night/activity_home.xml
+++ b/app/src/main/res/layout-night/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_transparent"
+    android:background="@color/dark_grey"
     tools:context=".activities.HomeActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,7 +15,7 @@
             android:id="@+id/search_layout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/white"
+            android:background="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -29,7 +29,8 @@
                 android:contentDescription="@string/search_icon"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:tint="@color/grey" />
 
             <EditText
                 android:id="@+id/search_field"
@@ -42,7 +43,8 @@
                 android:minWidth="48dp"
                 android:textSize="14sp"
                 android:gravity="start"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
+                android:textColorHint="@color/grey"
                 android:inputType="textCapSentences"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -73,7 +75,6 @@
             android:id="@+id/shimmer_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="50dp"
             app:layout_constraintTop_toBottomOf="@id/search_layout"
             app:shimmer_auto_start="true">
 
