--- a/app/src/main/res/layout-night/item_home_list_idle.xml
+++ b/app/src/main/res/layout-night/item_home_list_idle.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@color/dark_grey"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -10,7 +10,6 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:padding="15dp"
-        android:src="@drawable/album_2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,7 +20,7 @@
         android:layout_marginBottom="10dp"
         android:singleLine="true"
         android:maxLength="25"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/song_poster"
@@ -32,22 +31,9 @@
         android:id="@+id/album_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/dark_grey"
+        android:textColor="@color/grey"
         app:layout_constraintTop_toBottomOf="@id/song_name"
         app:layout_constraintLeft_toRightOf="@id/song_poster"/>
-
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="4dp"
-        android:padding="10dp"
-        android:src="@drawable/ic_music"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/grey"
-        android:contentDescription="@string/music_playing_content_description" />
 
     <View
         android:layout_width="match_parent"
