--- a/app/src/main/res/layout-night/item_home_list_playing.xml
+++ b/app/src/main/res/layout-night/item_home_list_playing.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -21,7 +21,7 @@
         android:layout_marginBottom="10dp"
         android:singleLine="true"
         android:maxLength="25"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/song_poster"
@@ -32,7 +32,7 @@
         android:id="@+id/album_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/dark_grey"
+        android:textColor="@color/grey"
         app:layout_constraintTop_toBottomOf="@id/song_name"
         app:layout_constraintLeft_toRightOf="@id/song_poster"/>
 
