--- a/app/src/main/res/layout/item_home_list_idle.xml
+++ b/app/src/main/res/layout/item_home_list_idle.xml
@@ -34,4 +34,12 @@
         app:layout_constraintTop_toBottomOf="@id/song_name"
         app:layout_constraintLeft_toRightOf="@id/song_poster"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@color/grey"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="90dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
